--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.VideoActivity"/>
+
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+
+
     </application>
 
 </manifest>
